--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+main {
+  z-index: 1;
+}
 body {
   font-family: sans-serif;
   padding: 90px 20px 0;
+  background-color: #425466;
 }
 
 .header {
@@ -20,7 +23,7 @@ body {
 .nav {
   display: flex;
   justify-content: space-between;
-
+  z-index: 999;
   max-width: 992px;
   margin: 0 auto;
 }
@@ -44,6 +47,8 @@ body {
 }
 
 .nav-menu-item {
+  animation: backInDown;
+  animation-duration: 2s;
   font-size: 18px;
   margin: 0 10px;
   line-height: 80px;
@@ -77,7 +82,7 @@ body {
 /* MOBILE */
 @media (max-width: 990px) {
   body {
-    padding-top: 70px;
+    padding-top: 85px;
   }
 
   .header {
@@ -89,20 +94,30 @@ body {
     padding-left: 15pxs;
     line-height: 60px;
   }
+  .h {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
 
   .nav-menu {
     flex-direction: column;
     align-items: center;
     margin: 0;
-    background-color: #2c3e50;
-    position: fixed;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: #2c3e50b6;
+    position: absolute;
     top: 60px;
     width: 100%;
     padding: 20px 0;
-
-    height: calc(100% - 60px);
+    /* height: calc(100% - 60px); */
+    height: 100vh;
     overflow-y: auto;
-
+    z-index: 3;
     left: 100%;
     transition: left 0.3s;
   }
@@ -133,4 +148,117 @@ body {
   width: 120px;
   height: 80px;
   padding-bottom: 15px;
+}
+.busqueda {
+  background-color: aliceblue;
+  width: 100%;
+  z-index: -1;
+  position: relative;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  clip-path: polygon(
+    15% 0%,
+    85% 0%,
+    100% 15%,
+    100% 85%,
+    85% 100%,
+    15% 100%,
+    0% 85%,
+    0% 15%
+  );
+  box-shadow: 0 12px 6px -22px #ffffff;
+}
+.tituloInput {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.lupa {
+  width: 55px;
+  height: 55px;
+}
+.input {
+  margin-left: 25px;
+}
+.home {
+  padding-top: 15px;
+  width: 100%;
+  padding-bottom: 15px;
+  z-index: -1;
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  position: relative;
+  font-family: "Roboto", Arial, sans-serif;
+  font-size: calc(10px + 5vw);
+  font-weight: 700;
+  color: #e4963d;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  perspective: 500px;
+}
+
+h1::before,
+h1::after {
+  content: attr(aria-label);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  text-shadow: 0.01em 0.01em 0.01em rgba(255, 255, 255, 255.3);
+}
+
+h1::before {
+  animation: floatAbove 3.5s ease-in-out infinite;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 50%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 50%);
+}
+
+h1::after {
+  opacity: 0.65;
+  filter: blur(0.02em);
+  transform: translate(-50%, -50%) rotateX(21deg);
+  animation: floatBelow 3.5s ease-in-out infinite;
+  -webkit-clip-path: polygon(0% 50%, 100% 50%, 100% 100%, 0% 100%);
+  clip-path: polygon(0% 50%, 100% 50%, 100% 100%, 0% 100%);
+}
+
+@keyframes floatAbove {
+  50% {
+    transform: translate(-50%, -60%);
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 0% 60%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 0% 60%);
+  }
+}
+
+@keyframes floatBelow {
+  50% {
+    transform: translate(-50%, -60%) rotateX(10deg);
+    -webkit-clip-path: polygon(0% 60%, 100% 60%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 60%, 100% 60%, 100% 100%, 0% 100%);
+  }
+}
+
+.titulo {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+h2 {
+  font-family: "Roboto", Arial, sans-serif;
+  font-size: calc(15px + 2vw);
+  font-weight: 700;
 }
