--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   background-color: #e4963d;
   height: 80px;
   position: fixed;
+  z-index: 200;
   width: 100%;
   top: 0;
   left: 0;
@@ -23,7 +24,7 @@ body {
 .nav {
   display: flex;
   justify-content: space-between;
-  z-index: 999;
+  z-index: 200;
   max-width: 992px;
   margin: 0 auto;
 }
@@ -91,7 +92,7 @@ body {
 
   .logoB {
     font-size: 25px;
-    padding-left: 15pxs;
+    padding-left: 15px;
     line-height: 60px;
   }
   .h {
@@ -261,4 +262,102 @@ h2 {
   font-family: "Roboto", Arial, sans-serif;
   font-size: calc(15px + 2vw);
   font-weight: 700;
+}
+
+.card {
+  width: min-content;
+  padding: 20px;
+  margin: 0 20px;
+  background: #fff;
+  border-radius: 30px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.04);
+  transition: 0.4s ease;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card .card-image {
+  position: relative;
+  z-index: 3;
+  width: 280px;
+  height: 280px;
+  padding: 0 20px;
+  text-align: center;
+  background: #f4f7f8;
+  border-radius: 12px;
+}
+
+.card .card-image img {
+  width: 100%;
+  transition: 0.4s ease;
+}
+
+.card:hover .card-image img {
+  transform: scale(1.02) rotate(-3deg) translateX(-5px);
+}
+
+.card .card-image .bx-star {
+  cursor: pointer;
+  z-index: -1;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  padding: 10px;
+  font-size: 20px;
+  color: #f7ae04;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.04);
+}
+
+.card .card-content h3 {
+  color: #222;
+  font-size: 22px;
+  margin-top: 20px;
+}
+
+.card .card-content p {
+  color: #555;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 8px 0 22px;
+  text-align: justify;
+}
+
+.card .card-content button {
+  cursor: pointer;
+  color: #fff;
+  width: 100%;
+  height: 50px;
+  font-size: 22px;
+  font-weight: 600;
+  border-radius: 12px;
+  background: linear-gradient(45deg, #fabd14, #eb9616);
+}
+
+.container {
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  display: grid;
+  padding-top: 25px;
+  padding-left: 120px;
+  grid-gap: 1rem;
+}
+
+@media (min-width: 200px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+    padding-left: 0px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 50px;
+  }
 }
